# ga-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  run.py
0f/fbf138825c/: metadata.json
40/5a9404724e/: metadata.json
75/876099f058/: metadata.json
78/5b05784d76/: metadata.json
83/560d68b2d2/: metadata.json
87/6ae6a4e6c2/: metadata.json
agents/: AGENTS.md  __init__.py  base.py  types.py
agents/claude_agent_sdk/: agent.py
agents/langchain/: deepagent.py  react.py
b2/254a7e31a8/: metadata.json
c0/33c5fa488b/: metadata.json
c1/51e1278799/: metadata.json
c1/af9a780d62/: metadata.json
c5/ef60ad7e41/: metadata.json
e7/6708193fcd/: metadata.json
evaluator/: AGENTS.md  __init__.py  evaluate.py  types.py
f6/e3c9bd8393/: metadata.json
tasks/: AGENTS.md  __init__.py  helpers.py  types.py
tasks/examples/: india_capital.json
tasks/worlds/: academic_paper.json  ads_analysis.json  ads_data.csv  arxiv_share_to_slack.json  cac_analysis_report.json  census_analysis.json  ci_fix.json  code_review.json  competitor_watch.json  crisis_management.json  cross_app_okr_progress.json  crypto_sentiment.json  delete_cancelled_events.json  delete_spam_emails.json  dependency_check.json  engineer_onboarding_digest.json  event_planning.json  fetch_summarize_page.json  fib_2000.json  finance_market_summary_doc.json  financial_audit.json  github_bug_triage_to_slack.json  github_draft_pr_email_reminder.json  housing_market.json  inbox_triage.json  invoice_processing.json  issue_triage.json  learning_plan.json  low_stock_reorder_alert.json  meeting_prep.json  onboarding.json  out_of_office.json  overnight_digest.json  pr_digest.json  reddit_top_python_post_to_doc.json  release_notes.json  repo_cleanup.json  schedule_deconflict.json  slack_find_incident_thread.json  sqlite_top_customers.json  (+9 more)
worlds/: AGENTS.md  server.py  utils.py
worlds/apps/: arxiv_app.py  calculator_app.py  calendar_app.py  docs_app.py  email_app.py  fetch_app.py  files_app.py  github_app.py  reddit_app.py  (+5 more)
worlds/data/: pyproject.toml  seed_data.json
(+150 files in other folders)
