[project]
name = "universal-mcp"
version = "0.1.0"
description = "Universal Model Context Protocol server"
authors = [{ name = "Dev Team", email = "dev@example.com" }]
dependencies = [
    "fastmcp==2.14.0",
    "pydantic==2.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
